FPET-967: sonar issue fixed